# apple_music_import

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: config.py  main.py
src/folder_classes/: bandcamp_folder.py  soulseek_folder.py
src/lib/: abstract_album_folder.py  apple_music.py  constants.py  cover_image.py  file_convertor.py  helpers.py  logger.py
tests/folder_classes/: test_bandcamp_folder.py  test_soulseek_folder.py
tests/lib/: conftest.py  test_apple_music.py  test_file_convertor.py  test_helpers.py  test_logger.py
typings/mutagen/: mp4.pyi
