[project]
name = "apple-music-import"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "send2trash>=1.8.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pydub-stubs>=0.25.1.6",
    "ruff>=0.11.9",
    "types-requests>=2.32.0.20250515",
]
